--- a/.github/workflows/dotnet-publish.yml
+++ b/.github/workflows/dotnet-publish.yml
@@ -20,6 +20,6 @@ jobs:
     - name: Build
       run: dotnet build Flutterbot.Common.csproj --configuration Release --no-restore
     - name: Pack package
-      run: dotnet pack Flutterbot.Common.csproj --configuration Release --no-build --include-symbols -o $(System.DefaultWorkingDirectory)/nuget
+      run: dotnet pack Flutterbot.Common.csproj --configuration Release --no-build --include-symbols -o ~/build/nuget
     - name: Publish NuGet package to GitHub
-      run: dotnet nuget push $(System.DefaultWorkingDirectory)/nuget/*.nupkg  --api-key ${{ secrets.GITHUB_TOKEN }} --source "https://nuget.pkg.github.com/99williamsdav/index.json"
+      run: dotnet nuget push ~/build/nuget/*.nupkg  --api-key ${{ secrets.GITHUB_TOKEN }} --source "https://nuget.pkg.github.com/99williamsdav/index.json"
