--- a/.github/workflows/dotnet-publish.yml
+++ b/.github/workflows/dotnet-publish.yml
@@ -23,5 +23,7 @@ jobs:
       run: dotnet pack Flutterbot.Common.csproj --configuration Release --no-build --include-symbols -o ~/build/nuget
     - name: Prep packages
       run: dotnet nuget add source --username 99williamsdav --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/99williamsdav/index.json"
+    - name: Delete existing package
+      run: dotnet nuget delete Flutterbot.Common.*.npkg --api-key ${{ secrets.GITHUB_TOKEN }} --source "github"
     - name: Publish NuGet package to GitHub
       run: dotnet nuget push ~/build/nuget/*.nupkg  --api-key ${{ secrets.GITHUB_TOKEN }} --source "github"
