--- a/.github/workflows/dotnet-publish.yml
+++ b/.github/workflows/dotnet-publish.yml
@@ -20,10 +20,8 @@ jobs:
     - name: Build
       run: dotnet build Flutterbot.Common.csproj --configuration Release --no-restore
     - name: Pack package
-      run: dotnet pack Flutterbot.Common.csproj --configuration Release --no-build --include-symbols -o ~/build/nuget
+      run: dotnet pack Flutterbot.Common.csproj --configuration Release --version-suffix ${{ github.run_number }} --no-build --include-symbols -o ~/build/nuget
     - name: Prep packages
       run: dotnet nuget add source --username 99williamsdav --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/99williamsdav/index.json"
-    - name: Delete existing package
-      run: dotnet nuget delete Flutterbot.Common 1.0.0 --api-key ${{ secrets.GITHUB_TOKEN }} --source "github" --non-interactive
     - name: Publish NuGet package to GitHub
       run: dotnet nuget push ~/build/nuget/*.nupkg  --api-key ${{ secrets.GITHUB_TOKEN }} --source "github"
