--- a/.github/workflows/dotnet-publish.yml
+++ b/.github/workflows/dotnet-publish.yml
@@ -24,4 +24,4 @@ jobs:
     - name: Prep packages
       run: dotnet nuget add source --username 99williamsdav --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/99williamsdav/index.json"
     - name: Publish NuGet package to GitHub
-      run: dotnet nuget push ~/build/nuget/*.nupkg  --api-key ${{ secrets.GITHUB_TOKEN }} --source "github"
+      run: dotnet nuget push ~/build/nuget/*.nupkg  --api-key ${{ secrets.GITHUB_TOKEN }} --source "github" --skip-duplicate
